--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <title>My Website</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-  <!-- Hello There! -->
+
+  <!-- Hello There! Lessons -->
+
   <header>
-  <h1>Cedar Etoile</h1>
+
+  <h1 class="title">Cedar Etoile</h1>
   <h2>Indigenous Photographer and Storyteller</h2>
+
   </header>
-  <section>
-  <p>Cedar Etoile is an Indigenous Photographer and Storyteller based on so-called Vancouver Island, BC. They take pride in being Kwakwa̱ka̱ʼwakw, Nuu-chah-nulth, Metis.</p>
+
+<section>
+
+  <p>Cedar Etoile is an <em>Indigenous</em> Photographer and Storyteller based on so-called Vancouver Island, BC. They take pride in being <strong>Kwakwa̱ka̱ʼwakw, Nuu-chah-nulth, Metis</strong> from the Dzawadenuxw, Ditidaht, Cree, and Metis Nations. Their background is in adventure & recreation tourism, brand strategy, advertisement, and marketing. Graduted from Vancouver Island Univeristy. Freelance content creator and Idnigenous consultant for Destination British Columbia, Tourism Vancouver Island, Visit Port Hardy, Tourism Nanaimo, Tourism Nanaimo, and Discover Campbell River. </p>
+
   <h3>Photography Services</h3>
   <ol>
     <li>One</li>
@@ -23,9 +37,34 @@
     <li>Music</li>
     <li>Portrait</li>
   </ul>
+
+  <a href="#footer"><p>Take me to my footer</p></a>
+
+<!-- These photos are mine! -->
+
+  <img src="images/cedaretoile_wct.jpg" alt="West Coast Trail" />
+  <img src="images/cedaretoile_wct-3.jpg" alt="West Coast Trail" />
+  <img src="images/cedaretoile_wct-4.jpg" alt="West Coast Trail" />
+
 </section>
-<footer>
-    <p>Website made by Cedar Etoile.</p>
-  </footer>
+
+<h1>Adding the a element hyperlink</h1>
+
+<div class="links">
+<section>
+
+  <p><a href="lesson5.html" target="_blank">Link to lesson 5</a></p>
+  <p><a href="images/cedaretoile_wct.jpg" target="_blank">West Coast Trail</a></p>
+  <p><a href="http://westcoasttrail.com/" target="_blank">West Coast Trail Comfort Camping</a></p>
+
+</section>
+</div>
+
+<footer id="footer">
+
+  <p>Website made by Cedar Etoile.</p>
+
+</footer>
+
 </body>
 </html>
